--- a/com.github.chriskn.jsonconsolelogger/pom.xml
+++ b/com.github.chriskn.jsonconsolelogger/pom.xml
@@ -3,30 +3,36 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.github.chriskn.jsonconsolelogger</groupId>
-	<version>1.0.1</version>
+	<version>1.0.2</version>
 
 	<name>JSON Console Logger</name>
 
 	<dependencies>
 		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.17</version>
-		</dependency>
-		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>1.7.5</version>
+			<version>1.7.16</version>
 		</dependency>
 		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
-			<version>1.7.5</version>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-core</artifactId>
+			<version>1.1.5</version>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.1.5</version>
 		</dependency>
 		<dependency>
 			<groupId>org.json</groupId>
 			<artifactId>json</artifactId>
 			<version>20151123</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+	        <scope>test</scope>
 		</dependency>
 	</dependencies>
 
@@ -75,7 +81,7 @@
 					</descriptors>
 					 <archive>
                     <manifest>
-                        <mainClass>com.github.chriskn.jsonconsolelogger.ConsoleClient</mainClass>
+                        <mainClass>com.github.chriskn.jsonconsolelogger.JsonConsoleLogger</mainClass>
                     </manifest>
                 </archive>
 				</configuration>
